feat: add Docker Compose configs for rabbitmq client, api gateway, and identity service

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -3,3 +3,5 @@ DB_PASSWORD=your_database_password
 DB_NAME=postgres
 PGADMIN_EMAIL=your_pgadmin_email
 PGADMIN_PASSWORD=your_pgadmin_password
+RABBITMQ_USER=your_rabbitmq_username
+RABBITMQ_PASSWORD=your_rabbitmq_password
