chore: configure JSON formatting rules in .editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -210,6 +210,9 @@ trim_trailing_whitespace = false
 [*.{yml,yaml}]
 indent_size = 2
 
+[*.json]
+indent_size = 2
+
 #### Ignore files
 
 [**/bin/**]
