--- a/apps/IdentityService/IdentityService.Application/IdentityService.Application.csproj
+++ b/apps/IdentityService/IdentityService.Application/IdentityService.Application.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="AutoMapper" Version="15.1.0" />
       <PackageReference Include="FluentValidation" Version="12.0.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+      <PackageReference Include="MailKit" Version="4.14.1" />
       <PackageReference Include="MediatR" Version="13.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.21" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
