--- a/apps/IdentityService/IdentityService.Presentation/appsettings.json
+++ b/apps/IdentityService/IdentityService.Presentation/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DefaultConnection": "Host=localhost;Port=5432;Database=identity_service_db;Username=finvault;Password=fRUZfLcF21g414PR",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
